--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -112,21 +112,27 @@ main {
 
 /* --- Header & Navigation --- */
 
+h1{
+  margin: 0;
+  font-size: 2.5rem;
+  font-weight: bold"
+}
+
 /* Responsive profile picture */
 
 .about-header {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2.5rem;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+  gap: 2.4rem;
+  margin-top: 2.4rem;
+  margin-bottom: 2.4rem;
   flex-wrap: wrap;
 }
 
 .headshot {
-  width: 360px;
-  height: 360px;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0 2px 16px rgba(0, 0, 0, 0.12);
@@ -439,7 +445,7 @@ input:checked + .slider .moon {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   border: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding: 10px 15px;
   cursor: pointer;
   border-radius: 50%;
@@ -573,7 +579,7 @@ input:checked + .slider .moon {
   }
 
   .carousel-button {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     padding: 8px 12px;
   }
   .carousel-dots {
@@ -606,4 +612,10 @@ input:checked + .slider .moon {
     padding: 8px 15px;
     font-size: 0.9em;
   }
+}
+
+.logo {
+  width: 80px; /* Adjust logo size */
+  height: auto;
+  margin-right: 10px; /* Space between logo and text */
 }
