--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -112,10 +112,15 @@ main {
 
 /* --- Header & Navigation --- */
 
-h1{
+h1 {
   margin: 0;
   font-size: 2.5rem;
-  font-weight: bold"
+  font-weight: bold;
+}
+
+a {
+  font-size: 1rem;
+  margin-left: 0.5rem;
 }
 
 /* Responsive profile picture */
